--- a/client-app/package.json
+++ b/client-app/package.json
@@ -15,6 +15,8 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "axios": "^0.26.1",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
