--- a/.gitignore
+++ b/.gitignore
@@ -456,3 +456,5 @@ $RECYCLE.BIN/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+API/reactivities.db-shm
+API/reactivities.db-wal
